# HPC_2018_1

./: GPU_info.txt  README.md  Taller1_HPC  Taller1_HPC.c  ans.csv  vec1.csv  vec2.csv
MPI/: mpi_hello_world.c  mpi_hello_world.sh  test.c  test.sh
cuda/: cudatest.cu  matmult.cu  matmult.sh
cuda/matmult/: ans_cudaMatmult
cuda/vecadd/: ans_cudaVecadd  vecadd  vecadd.cu  vecadd.sh
matmult/: matMult  matMult.c  matMult.sh
openMP/: omp_hello
openMP/matmult/: matMult  matMult.c  res_matMult.out
openMP/vecadd/: vec1.csv  vecAdd.c
parcial2/primera_parte/: mat1.txt  matgen.c  matmult  matmult.sh
parcial2/segunda_parte/: ans.txt  ansTime.txt  mat1.txt  mat2.txt  matgen  matmult  matmult.cu  matmult.h  matmult.sh  out_matmult.txt  (+4 more)
parcial2_p1/: mat1.txt  mat2.txt  matGen  matGen.c  matMult_omp.c  matgen  matgen.c  matmult  matmult.c  matmult.cu  matmult.sh
proyecto/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  DisplayImage.cu  DisplayImage.sh  Esteganografía con Imágenes.pptx  Makefile  cmake_install.cmake  dataAnalysis.ods  outDisplayImage.txt  plotting.py
taller1/: ans.csv  ansMat.csv  ansVec.csv  mat1.csv  mat2.csv  matMult  matMult.c  res_vecAdd.out  vec1.csv  vec2.csv  vecAdd  vecAdd.c  vecAdd.sh
tareaBonus/globalMem/: CMakeCache.txt  CMakeLists.txt  DisplayImage.cpp  Makefile  cmake_install.cmake  grayScale.cu  imgTransform.sh  res_imgTransform.txt  sobel_Gmem  sobel_Gmem.cu
tareaBonus/globalMem/src/: imgTransform.sh  res_imgTransform.txt  sobel_Gmem
vecadd/: ansVec.csv  res_vecAdd.out  vec2.csv  vecAdd  vecAdd.c  vecAdd.sh
(+9 files in other folders)
